--- a/app/settings/Settings.module.css
+++ b/app/settings/Settings.module.css
@@ -11,6 +11,42 @@
     z-index: 1;
 }
 
+@media (max-width: 1024px) {
+    .main {
+        margin-left: 280px;
+    }
+}
+
+@media (max-width: 768px) {
+    .main {
+        margin-left: 0;
+        padding: 24px;
+        padding-bottom: 100px;
+    }
+
+    .title {
+        font-size: 28px;
+    }
+
+    .row {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
+    }
+
+    .btn,
+    .dangerBtn {
+        width: 100%;
+        text-align: center;
+    }
+
+    .modal {
+        width: calc(100% - 32px);
+        margin: 16px;
+        padding: 24px;
+    }
+}
+
 .title {
     font-size: 32px;
     font-weight: 700;
