--- a/app/subscriptions/Subscriptions.module.css
+++ b/app/subscriptions/Subscriptions.module.css
@@ -11,6 +11,49 @@
     max-width: 1400px;
 }
 
+@media (max-width: 1024px) {
+    .main {
+        margin-left: 280px;
+        padding: 40px;
+    }
+}
+
+@media (max-width: 768px) {
+    .main {
+        margin-left: 0;
+        padding: 24px;
+        padding-bottom: 100px;
+        /* Space for bottom nav */
+    }
+
+    .title {
+        font-size: 32px;
+    }
+
+    .overviewGrid {
+        grid-template-columns: 1fr;
+        gap: 24px;
+    }
+
+    .burnAmount {
+        font-size: 48px;
+    }
+
+    .subGrid {
+        grid-template-columns: 1fr;
+    }
+
+    .subCard {
+        padding: 16px;
+    }
+
+    .subIcon {
+        width: 48px;
+        height: 48px;
+        font-size: 18px;
+    }
+}
+
 .header {
     margin-bottom: 48px;
 }
