--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,6 @@
+@import "react-datepicker/dist/react-datepicker.css";
+@import "./datepicker.css";
+
 :root {
   --background: #050505;
   --foreground: #ededed;
